[package]
name = "rustmfd"
version = "0.1.0"
authors = ["Thomas Antony <mail@thomasantony.com"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
bench = false

[dependencies]
cxx = {version = "0.3", path="../cxx"}
winapi = "0.3.9"


[build-dependencies]
cxx-build = {version = "0.3", path="../cxx/gen/build"}
